PCM/org.palladiosimulator.pcm/src-man/org/palladiosimulator/pcm/stochasticexpressions/parser/PCMStoExParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g 2012-09-27 09:54:49

package org.palladiosimulator.pcm.stochasticexpressions.parser;

import java.util.ArrayList;
import java.util.Collection;

import org.antlr.runtime.BitSet;
import org.antlr.runtime.EarlyExitException;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.palladiosimulator.pcm.parameter.CharacterisedVariable;
import org.palladiosimulator.pcm.parameter.ParameterFactory;
import org.palladiosimulator.pcm.parameter.VariableCharacterisationType;

import org.palladiosimulator.pcm.stochasticexpressions.parser.PCMStoExParser;
import de.uka.ipd.sdq.probfunction.BoxedPDF;
import de.uka.ipd.sdq.probfunction.ContinuousSample;
import de.uka.ipd.sdq.probfunction.ProbabilityFunction;
import de.uka.ipd.sdq.probfunction.ProbabilityMassFunction;
import de.uka.ipd.sdq.probfunction.ProbfunctionFactory;
import de.uka.ipd.sdq.probfunction.Sample;
import de.uka.ipd.sdq.stoex.AbstractNamedReference;
import de.uka.ipd.sdq.stoex.Atom;
import de.uka.ipd.sdq.stoex.BoolLiteral;
import de.uka.ipd.sdq.stoex.BooleanExpression;
import de.uka.ipd.sdq.stoex.BooleanOperations;
import de.uka.ipd.sdq.stoex.BooleanOperatorExpression;
import de.uka.ipd.sdq.stoex.CompareExpression;
import de.uka.ipd.sdq.stoex.CompareOperations;
import de.uka.ipd.sdq.stoex.Comparison;
import de.uka.ipd.sdq.stoex.DoubleLiteral;
import de.uka.ipd.sdq.stoex.Expression;
import de.uka.ipd.sdq.stoex.FunctionLiteral;
import de.uka.ipd.sdq.stoex.IfElse;
import de.uka.ipd.sdq.stoex.IfElseExpression;
import de.uka.ipd.sdq.stoex.IntLiteral;
import de.uka.ipd.sdq.stoex.NamespaceReference;
import de.uka.ipd.sdq.stoex.NegativeExpression;
import de.uka.ipd.sdq.stoex.NotExpression;
import de.uka.ipd.sdq.stoex.Parenthesis;
import de.uka.ipd.sdq.stoex.Power;
import de.uka.ipd.sdq.stoex.PowerExpression;
import de.uka.ipd.sdq.stoex.ProbabilityFunctionLiteral;
import de.uka.ipd.sdq.stoex.Product;
import de.uka.ipd.sdq.stoex.ProductExpression;
import de.uka.ipd.sdq.stoex.ProductOperations;
import de.uka.ipd.sdq.stoex.StoexFactory;
import de.uka.ipd.sdq.stoex.StringLiteral;
import de.uka.ipd.sdq.stoex.Term;
import de.uka.ipd.sdq.stoex.TermExpression;
import de.uka.ipd.sdq.stoex.TermOperations;
import de.uka.ipd.sdq.stoex.Unary;
import de.uka.ipd.sdq.stoex.VariableReference;

//import de.uka.ipd.sdq.stoex.analyser.visitors.StoExPrettyPrintVisitor;

public class PCMStoExParser extends Parser {

    public static final String[] tokenNames = new String[] { "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "OR", "XOR",
            "GREATER", "LESS", "EQUAL", "NOTEQUAL", "GREATEREQUAL", "LESSEQUAL", "PLUS", "MINUS", "MUL", "DIV", "MOD",
            "POW", "NOT", "NUMBER", "STRING_LITERAL", "DOT", "ID", "LPAREN", "RPAREN", "COLON", "INTPMF",
            "SQUARE_PAREN_L", "SQUARE_PAREN_R", "DOUBLEPMF", "ENUMPMF", "ORDERED_DEF", "DOUBLEPDF", "BOOLPMF", "SEMI",
            "FALSE", "TRUE", "BYTESIZE", "STRUCTURE", "NUMBER_OF_ELEMENTS", "TYPE", "VALUE", "INNER", "UNIT", "BOOL",
            "DEFINITION", "DIGIT", "Exponent", "ALPHA", "IDSTART", "IDPART", "WS", "COMMENT", "LINE_COMMENT", "'?'",
            "':'" };
    public static final int INNER = 43;
    public static final int MOD = 17;
    public static final int BOOLPMF = 34;
    public static final int Exponent = 48;
    public static final int GREATEREQUAL = 11;
    public static final int ENUMPMF = 31;
    public static final int NOT = 19;
    public static final int AND = 4;
    public static final int ID = 23;
    public static final int EOF = -1;
    public static final int STRUCTURE = 39;
    public static final int LPAREN = 24;
    public static final int TYPE = 41;
    public static final int NOTEQUAL = 10;
    public static final int T__55 = 55;
    public static final int T__56 = 56;
    public static final int RPAREN = 25;
    public static final int GREATER = 7;
    public static final int STRING_LITERAL = 21;
    public static final int POW = 18;
    public static final int EQUAL = 9;
    public static final int LESS = 8;
    public static final int DEFINITION = 46;
    public static final int PLUS = 13;
    public static final int DIGIT = 47;
    public static final int COMMENT = 53;
    public static final int DOT = 22;
    public static final int DOUBLEPDF = 33;
    public static final int XOR = 6;
    public static final int INTPMF = 27;
    public static final int LINE_COMMENT = 54;
    public static final int DOUBLEPMF = 30;
    public static final int BOOL = 45;
    public static final int NUMBER = 20;
    public static final int NUMBER_OF_ELEMENTS = 40;
    public static final int VALUE = 42;
    public static final int MINUS = 14;
    public static final int MUL = 15;
    public static final int SEMI = 35;
    public static final int TRUE = 37;
    public static final int ALPHA = 49;
    public static final int COLON = 26;
    public static final int SQUARE_PAREN_R = 29;
    public static final int UNIT = 44;
    public static final int WS = 52;
    public static final int SQUARE_PAREN_L = 28;
    public static final int OR = 5;
    public static final int IDPART = 51;
    public static final int IDSTART = 50;
    public static final int BYTESIZE = 38;
    public static final int DIV = 16;
    public static final int ORDERED_DEF = 32;
    public static final int FALSE = 36;
    public static final int LESSEQUAL = 12;

    // delegates
    // delegators

    public PCMStoExParser(final TokenStream input) {
        this(input, new RecognizerSharedState());
    }

    public PCMStoExParser(final TokenStream input, final RecognizerSharedState state) {
        super(input, state);

    }

    @Override
    public String[] getTokenNames() {
        return PCMStoExParser.tokenNames;
    }

    @Override
    public String getGrammarFileName() {
        return "/Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g";
    }

    // $ANTLR start "expression"
    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:19:1:
    // expression returns [Expression exp] : c= ifelseExpr EOF ;
    public final Expression expression() throws RecognitionException {
        Expression exp = null;

        IfElse c = null;

        try {
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:20:3:
            // (c= ifelseExpr EOF )
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:21:3:
            // c= ifelseExpr EOF
            {
                pushFollow(FOLLOW_ifelseExpr_in_expression41);
                c = ifelseExpr();

                this.state._fsp--;

                match(this.input, EOF, FOLLOW_EOF_in_expression43);
                exp = c;

            }

        } catch (final RecognitionException re) {
            reportError(re);
            recover(this.input, re);
        } finally {
        }
        return exp;
    }

    // $ANTLR end "expression"

    // $ANTLR start "ifelseExpr"
    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:24:1:
    // ifelseExpr returns [IfElse ifelseExp] : cond= boolAndExpr ( '?' ifEx= boolAndExpr ':' elseEx=
    // boolAndExpr )? ;
    public final IfElse ifelseExpr() throws RecognitionException {
        IfElse ifelseExp = null;

        BooleanExpression cond = null;

        BooleanExpression ifEx = null;

        BooleanExpression elseEx = null;

        try {
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:25:2:
            // (cond= boolAndExpr ( '?' ifEx= boolAndExpr ':' elseEx= boolAndExpr )? )
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:26:2:
            // cond= boolAndExpr ( '?' ifEx= boolAndExpr ':' elseEx= boolAndExpr )?
            {
                pushFollow(FOLLOW_boolAndExpr_in_ifelseExpr66);
                cond = boolAndExpr();

                this.state._fsp--;

                ifelseExp = cond;
                // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:27:3:
                // ( '?' ifEx= boolAndExpr ':' elseEx= boolAndExpr )?
                int alt1 = 2;
                final int LA1_0 = this.input.LA(1);

                if ((LA1_0 == 55)) {
                    alt1 = 1;
                }
                switch (alt1) {
                case 1:
                // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:27:4:
                // '?' ifEx= boolAndExpr ':' elseEx= boolAndExpr
                {
                    final IfElseExpression newIfelseExp = StoexFactory.eINSTANCE.createIfElseExpression();
                    newIfelseExp.setConditionExpression(cond);
                    match(this.input, 55, FOLLOW_55_in_ifelseExpr79);
                    pushFollow(FOLLOW_boolAndExpr_in_ifelseExpr85);
                    ifEx = boolAndExpr();

                    this.state._fsp--;

                    newIfelseExp.setIfExpression(ifEx);
                    match(this.input, 56, FOLLOW_56_in_ifelseExpr89);
                    pushFollow(FOLLOW_boolAndExpr_in_ifelseExpr95);
                    elseEx = boolAndExpr();

                    this.state._fsp--;

                    newIfelseExp.setElseExpression(elseEx);
                    ifelseExp = newIfelseExp;

                }
                    break;

                }

            }

        } catch (final RecognitionException re) {
            reportError(re);
            recover(this.input, re);
        } finally {
        }
        return ifelseExp;
    }

    // $ANTLR end "ifelseExpr"

    // $ANTLR start "boolAndExpr"
    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:33:1:
    // boolAndExpr returns [BooleanExpression boolExp] : b1= boolOrExpr ( AND b2= boolOrExpr )* ;
    public final BooleanExpression boolAndExpr() throws RecognitionException {
        BooleanExpression boolExp = null;

        BooleanExpression b1 = null;

        BooleanExpression b2 = null;

        try {
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:34:2:
            // (b1= boolOrExpr ( AND b2= boolOrExpr )* )
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:35:2:
            // b1= boolOrExpr ( AND b2= boolOrExpr )*
            {
                pushFollow(FOLLOW_boolOrExpr_in_boolAndExpr120);
                b1 = boolOrExpr();

                this.state._fsp--;

                boolExp = b1;
                // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:36:3:
                // ( AND b2= boolOrExpr )*
                loop2: do {
                    int alt2 = 2;
                    final int LA2_0 = this.input.LA(1);

                    if ((LA2_0 == AND)) {
                        alt2 = 1;
                    }

                    switch (alt2) {
                    case 1:
                    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:36:4:
                    // AND b2= boolOrExpr
                    {
                        final BooleanOperatorExpression boolExprNew = StoexFactory.eINSTANCE
                                .createBooleanOperatorExpression();
                        match(this.input, AND, FOLLOW_AND_in_boolAndExpr131);
                        boolExprNew.setOperation(BooleanOperations.AND);
                        pushFollow(FOLLOW_boolOrExpr_in_boolAndExpr142);
                        b2 = boolOrExpr();

                        this.state._fsp--;

                        boolExprNew.setLeft(b1);
                        boolExprNew.setRight(b2);
                        boolExp = boolExprNew;

                    }
                        break;

                    default:
                        break loop2;
                    }
                } while (true);

            }

        } catch (final RecognitionException re) {
            reportError(re);
            recover(this.input, re);
        } finally {
        }
        return boolExp;
    }

    // $ANTLR end "boolAndExpr"

    // $ANTLR start "boolOrExpr"
    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:41:1:
    // boolOrExpr returns [BooleanExpression boolExp] : b1= compareExpr ( ( OR | XOR ) b2=
    // compareExpr )* ;
    public final BooleanExpression boolOrExpr() throws RecognitionException {
        BooleanExpression boolExp = null;

        Comparison b1 = null;

        Comparison b2 = null;

        try {
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:42:2:
            // (b1= compareExpr ( ( OR | XOR ) b2= compareExpr )* )
            // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:43:2:
            // b1= compareExpr ( ( OR | XOR ) b2= compareExpr )*
            {
                pushFollow(FOLLOW_compareExpr_in_boolOrExpr169);
                b1 = compareExpr();

                this.state._fsp--;

                boolExp = b1;
                // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:44:3:
                // ( ( OR | XOR ) b2= compareExpr )*
                loop4: do {
                    int alt4 = 2;
                    final int LA4_0 = this.input.LA(1);

                    if (((LA4_0 >= OR && LA4_0 <= XOR))) {
                        alt4 = 1;
                    }

                    switch (alt4) {
                    case 1:
                    // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:44:5:
                    // ( OR | XOR ) b2= compareExpr
                    {
                        final BooleanOperatorExpression boolExprNew = StoexFactory.eINSTANCE
                                .createBooleanOperatorExpression();
                        // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:45:3:
                        // ( OR | XOR )
                        int alt3 = 2;
                        final int LA3_0 = this.input.LA(1);

                        if ((LA3_0 == OR)) {
                            alt3 = 1;
                        } else if ((LA3_0 == XOR)) {
                            alt3 = 2;
                        } else {
                            final NoViableAltException nvae = new NoViableAltException("", 3, 0, this.input);

                            throw nvae;
                        }
                        switch (alt3) {
                        case 1:
                        // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:45:4:
                        // OR
                        {
                            match(this.input, OR, FOLLOW_OR_in_boolOrExpr182);
                            boolExprNew.setOperation(BooleanOperations.OR);

                        }
                            break;
                        case 2:
                        // /Users/joerg/Documents/work/palladio-dev/de.uka.ipd.sdq.pcm/src-man/de/uka/ipd/sdq/pcm/stochasticexpressions/parser/PCMStoEx.g:46:4:
                        // XOR
                        {
                            match(this.input, XOR, FOLLOW_XOR_in_boolOrExpr190);
                            boolExprNew.setOperation(BooleanOperations.XOR);

                        }
                            break;

                        }

                        pushFollow(FOLLOW_compareExpr_in_boolOrExpr202);
                        b2 = compareExpr();

                        this.state._fsp--;
